--- a/FsxLogger.Client/LoginWindow.g.xaml
+++ b/FsxLogger.Client/LoginWindow.g.xaml
@@ -22,18 +22,26 @@
       <Setter Property="Padding" Value="12 4"/>
     </Style>
   </Window.Resources>
-  <Grid DataContext="{StaticResource vm}">
+  <Grid DataContext="{StaticResource vm}" Margin="8">
     <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Username"/>
     <TextBlock Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Password"/>
-    <TextBox Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Stretch">
+    <TextBox Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" Padding="4">
       <TextBox.Text>
         <Binding Path="Username"/>
       </TextBox.Text>
     </TextBox>
     <PasswordBox Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" Name="focus"/>
     <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="4">
-      <Button Content="Login"/>
-      <Button Content="Cancel"/>
+      <Button Content="Login">
+        <Button.Command>
+          <Binding Path="LoginCommand"/>
+        </Button.Command>
+      </Button>
+      <Button Content="Cancel">
+        <Button.Command>
+          <Binding Path="CancelLoginCommand"/>
+        </Button.Command>
+      </Button>
     </StackPanel>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="120"/>
