--- a/FsxLogger.Client/LoginWindow.g.xaml
+++ b/FsxLogger.Client/LoginWindow.g.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="FsxLogger.Client.LoginWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:ns0="clr-namespace:FsxLogger.ViewModels.Wpf;assembly=FsxLogger.ViewModels.Wpf" xmlns:ns1="clr-namespace:AmmySidekick;assembly=AmmySidekick" Width="320" Height="240" MinWidth="320" MinHeight="240" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" Title="Login" ns1:Ammy.Register="/FsxLogger.Client;component/LoginWindow.g.xaml">
+<Window x:Class="FsxLogger.Client.LoginWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:ns0="clr-namespace:FsxLogger.ViewModels.Wpf;assembly=FsxLogger.ViewModels.Wpf" xmlns:ns1="clr-namespace:WPFLocalizeExtension.Extensions;assembly=WPFLocalizeExtension" xmlns:ns2="clr-namespace:AmmySidekick;assembly=AmmySidekick" Width="320" Height="240" MinWidth="320" MinHeight="240" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" Title="Login" ns2:Ammy.Register="/FsxLogger.Client;component/LoginWindow.g.xaml">
   <FocusManager.FocusedElement>
     <Binding ElementName="focus"/>
   </FocusManager.FocusedElement>
@@ -33,6 +33,11 @@
         <Binding Path="CancelLoginCommand" Source="{StaticResource vm}"/>
       </KeyBinding.Command>
     </KeyBinding>
+    <KeyBinding Key="L" Modifiers="Alt">
+      <KeyBinding.Command>
+        <Binding Path="ChangeLanguageCommand" Source="{StaticResource vm}"/>
+      </KeyBinding.Command>
+    </KeyBinding>
   </Window.InputBindings>
   <Grid DataContext="{StaticResource vm}" Margin="8">
     <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Username"/>
@@ -43,13 +48,19 @@
       </TextBox.Text>
     </TextBox>
     <PasswordBox Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" PasswordChanged="changed"/>
-    <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="4">
-      <Button Content="Login">
+    <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" Grid.RowSpan="1" Grid.ColumnSpan="2" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="4">
+      <Button>
+        <Button.Content>
+          <ns1:LocExtension>FsxLogger.Translations:Vocabulary:LoginText</ns1:LocExtension>
+        </Button.Content>
         <Button.Command>
           <Binding Path="LoginCommand"/>
         </Button.Command>
       </Button>
-      <Button Content="Cancel">
+      <Button>
+        <Button.Content>
+          <ns1:LocExtension>FsxLogger.Translations:Vocabulary:CancelLoginText</ns1:LocExtension>
+        </Button.Content>
         <Button.Command>
           <Binding Path="CancelLoginCommand"/>
         </Button.Command>
