--- a/FsxLogger.Client/LoginWindow.g.xaml
+++ b/FsxLogger.Client/LoginWindow.g.xaml
@@ -1,9 +1,12 @@
-<Window x:Class="FsxLogger.Client.LoginWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:ns0="clr-namespace:FsxLogger.ViewModels.Wpf;assembly=FsxLogger.ViewModels.Wpf" xmlns:ns1="clr-namespace:WPFLocalizeExtension.Extensions;assembly=WPFLocalizeExtension" xmlns:ns2="clr-namespace:AmmySidekick;assembly=AmmySidekick" Width="320" Height="240" MinWidth="320" MinHeight="240" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" Title="Login" ns2:Ammy.Register="/FsxLogger.Client;component/LoginWindow.g.xaml">
+<Window x:Class="FsxLogger.Client.LoginWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:ns0="clr-namespace:WPFLocalizeExtension.Extensions;assembly=WPFLocalizeExtension" xmlns:ns1="clr-namespace:FsxLogger.ViewModels.Wpf;assembly=FsxLogger.ViewModels.Wpf" xmlns:ns2="clr-namespace:AmmySidekick;assembly=AmmySidekick" Width="380" Height="240" MinWidth="380" MinHeight="240" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" ns2:Ammy.Register="/FsxLogger.Client;component/LoginWindow.g.xaml">
+  <Window.Title>
+    <ns0:LocExtension>FsxLogger.Translations:Vocabulary:LoginTitle</ns0:LocExtension>
+  </Window.Title>
   <FocusManager.FocusedElement>
     <Binding ElementName="focus"/>
   </FocusManager.FocusedElement>
   <Window.Resources>
-    <ns0:LoginViewModel x:Key="vm"/>
+    <ns1:LoginViewModel x:Key="vm"/>
     <Style TargetType="TextBlock">
       <Setter Property="FontSize" Value="24"/>
       <Setter Property="Margin" Value="4"/>
@@ -40,8 +43,16 @@
     </KeyBinding>
   </Window.InputBindings>
   <Grid DataContext="{StaticResource vm}" Margin="8">
-    <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Username"/>
-    <TextBlock Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Password"/>
+    <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Stretch">
+      <TextBlock.Text>
+        <ns0:LocExtension>FsxLogger.Translations:Vocabulary:UsernameText</ns0:LocExtension>
+      </TextBlock.Text>
+    </TextBlock>
+    <TextBlock Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Stretch">
+      <TextBlock.Text>
+        <ns0:LocExtension>FsxLogger.Translations:Vocabulary:PasswordText</ns0:LocExtension>
+      </TextBlock.Text>
+    </TextBlock>
     <TextBox Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" Padding="4" Name="focus">
       <TextBox.Text>
         <Binding Path="Username"/>
@@ -51,7 +62,7 @@
     <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" Grid.RowSpan="1" Grid.ColumnSpan="2" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="4">
       <Button>
         <Button.Content>
-          <ns1:LocExtension>FsxLogger.Translations:Vocabulary:LoginText</ns1:LocExtension>
+          <ns0:LocExtension>FsxLogger.Translations:Vocabulary:LoginText</ns0:LocExtension>
         </Button.Content>
         <Button.Command>
           <Binding Path="LoginCommand"/>
@@ -59,7 +70,7 @@
       </Button>
       <Button>
         <Button.Content>
-          <ns1:LocExtension>FsxLogger.Translations:Vocabulary:CancelLoginText</ns1:LocExtension>
+          <ns0:LocExtension>FsxLogger.Translations:Vocabulary:CancelLoginText</ns0:LocExtension>
         </Button.Content>
         <Button.Command>
           <Binding Path="CancelLoginCommand"/>
@@ -67,7 +78,7 @@
       </Button>
     </StackPanel>
     <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="120"/>
+      <ColumnDefinition Width="160"/>
       <ColumnDefinition Width="*"/>
     </Grid.ColumnDefinitions>
     <Grid.RowDefinitions>
